--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
         "request": "2.87.0",
         "redis": "~2.8.0",
         "http": "*",
-        "http-post": "~0.1.1"
+        "http-post": "~0.1.1",
+        "uuid": "3.2.1"
     },
     "scripts": {
         "start": "node index.js",
